# abyss

./: .gitignore  Cargo.toml  docker-compose.yml  justfile
crates/abyss/: Cargo.toml
crates/abyss-aggregate/: Cargo.toml
crates/abyss-aggregate/src/: lib.rs
crates/abyss-api/: Cargo.toml
crates/abyss-api/src/: dragon.rs  lib.rs  middleware.rs
crates/abyss-collect/: Cargo.toml
crates/abyss-collect/src/: crawl.rs  error.rs  lib.rs  seed.rs  timeline.rs
crates/abyss-core/: Cargo.toml
crates/abyss-core/src/: config.rs  error.rs  lib.rs  patch.rs  platform.rs  time.rs
crates/abyss-serve/: Cargo.toml
crates/abyss-serve/src/: config.rs  main.rs
crates/abyss-static/: Cargo.toml
crates/abyss-static/src/: lib.rs
crates/abyss-store/: Cargo.toml
crates/abyss-store/src/: error.rs  lib.rs  models.rs  store.rs
crates/abyss/src/: config.rs  main.rs
migrations/: 0001_init.sql
