[package]
name = "abyss-api"
edition.workspace = true
version.workspace = true

[dependencies]
abyss-core.workspace = true
abyss-static.workspace = true
abyss-store.workspace = true
axum.workspace = true
reqwest.workspace = true
rift.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
