[package]
name = "abyss-collect"
edition.workspace = true
version.workspace = true

[dependencies]
abyss-core.workspace = true
abyss-static.workspace = true
abyss-store.workspace = true
rift.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
